[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gbm_simulator"
version = "0.1.0"
description = "Your GBM simulator package"
authors = [
    {name = "Tom", email = "tombo2003.tb@gmail.com"},
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib"
]

[project.scripts]
pygbm = "gbm_simulator.cli:main"
