[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gbm_simulator"
version = "0.1.0"
description = "Your GBM simulator package"
authors = [
    {name = "Tom", email = "tombo2003.tb@gmail.com"},
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Physicists",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Source = "https://github.com/tombo367/pygbm"

[project.scripts]
pygbm = "pygbm.cli:main"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "pygbm/version.py"
